src/objects/Kizuna_Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>State__c &amp; &quot; &quot; &amp; City__c &amp; &quot; &quot; &amp; Street__c &amp; &quot; &quot; &amp; Building__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(ISNULL(BirthOfDate__c), null,
  IF(OR(MONTH(today())-MONTH( BirthOfDate__c )&gt;0,AND(MONTH(TODAY()) - MONTH( BirthOfDate__c )&gt;=0,DAY(TODAY()) - DAY( BirthOfDate__c )&gt;=0)),
    YEAR(TODAY()) - YEAR( BirthOfDate__c ),
    YEAR(TODAY()) - YEAR( BirthOfDate__c )-1
  )
)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BirthOfDate__c</fullName>
        <label>Birth Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BloodType__c</fullName>
        <label>Blood Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CandidateName__c</fullName>
        <formula>FirstName__c &amp; &quot; &quot; &amp; LastName__c</formula>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationCode__c</fullName>
        <label>Confirmation Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmargencyContactAddress__c</fullName>
        <label>Emargency Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmargencyContactName__c</fullName>
        <label>Emargency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmargencyContactPhone__c</fullName>
        <label>Emargency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EmargencyContactRelation__c</fullName>
        <label>Emargency Contact Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmargencyContactType__c</fullName>
        <label>Emargency Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormitory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NumberOfParticipant__c</fullName>
        <label>Num Of Participant</label>
        <summaryFilterItems>
            <field>Kizuna_Participant__c.ParticipateFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Kizuna_Participant__c.Candidate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OtherEmargencyContactType__c</fullName>
        <label>Other Emargency Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isConfirmCodeSentFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isConfirmCodeSentFlg</label>
        <type>Checkbox</type>
    </fields>
    <label>Volunteer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CandidateName__c</columns>
        <columns>Address__c</columns>
        <columns>Age__c</columns>
        <columns>Gender__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VL{00000000}</displayFormat>
        <label>V-Event</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>